# gaia

./: .gitignore  Cargo.toml  README.md  biome.json
.sqlx/: query-027f58eb9d4fd412292f885a4a59a29061a50e8422b5147e81fcf03bcc1c35d1.json  query-04b522289358185ed3acb95c09beb46680ee3dba36fd11968d9918783b9a5f75.json  query-0664068c959d934ee9bdf260f0d503c36703125b1ccaea610f3f787b48a64f55.json  query-07802927c86cfb871778437dbab79cc7c43913241d5d949dd2495039021606a8.json  query-0f0323998bb4e487a4fd58110693f66e09e31593f1b1d117b31746b0e86df5c6.json  query-148e611921243ff42c4cd94ab8a2d85583cdc380de86fbbe2a2ded8e49e24e35.json  query-258ac2bd4f749e81fce100b77921880d515001801529fe45fc82c9faace7b76f.json  (+16 more)
.zed/: settings.json
api/: README.tests.md  SEARCH.md  TYPE_FIXES.md  (+10 more)
cache/: Cargo.toml
cache/src/: cache.rs  main.rs
indexer/: Cargo.toml
indexer/benches/: validate_decimal.rs  validate_float.rs
indexer/src/: cache.rs  error.rs  lib.rs  main.rs  preprocess.rs  storage.rs
indexer/src/block_handler/: edit_handler.rs  membership_handler.rs  mod.rs  root_handler.rs  space_handler.rs  utils.rs
indexer/src/cache/: kv.rs  mod.rs  postgres.rs  properties_cache.rs
indexer/src/models/: ai.md  entities.rs  membership.rs  membership_test.rs  mod.rs  properties.rs  properties_test.rs  relations.rs  relations_test.rs  spaces.rs  triples.rs  v2.rs  v3.rs  values.rs  values_test.rs
indexer/src/storage/: entities.rs  kv.rs  mod.rs  postgres.rs  storage.rs
indexer/src/test_utils/: mod.rs  test_storage.rs
indexer/src/validators/: error.rs  examples.rs  mod.rs  validate_checkbox.rs  validate_datatype.rs  validate_decimal.rs  validate_float.rs  validate_number.rs  validate_point.rs  validate_text.rs  validate_time.rs
indexer/tests/: 25omwWh6HYgeRQKCaSpVpa_ops  INTEGRATION_README.md  SgjATMbm41LX6naizMqBVd_ops  integration.rs  migration.rs
stream/: Cargo.toml
stream/src/: lib.rs  sink.rs  substreams_stream.rs  utils.rs
(+124 files in other folders)
