[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
chrono = "0.4.41"
dotenv = "0.15.0"
stream = { version = "0.1.0", path = "../stream" }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
grc20 = { version = "0.1.0", path = "../grc20" }
prost = "0.13.3"
prost-types = "0.13.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json"] }
thiserror = "2.0.12"
serde_json = "1.0.140"
serde = { version = "1", features = ["derive"] }
